# Pepper-VAD

./: .gitignore
compile-models/: speechbrain-embeddings.py  whisper.py
vad/: Cargo.toml
vad/src/: m80-speechbrain.npy  main.rs  microphone_stream.rs  speech_brain_embedding_model.rs  speech_brain_feature_extractor.rs  stdin_stream.rs  wake_word_listener.rs  wake_word_listener_state.rs  whisper_feature_extractor.rs  whisper_model.rs  whisper_transcription.rs
