[package]
name = "pepper_asr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"num" = "*"
"npy" = "*"
"realfft" = "*"
"lazy_static" = "*"
"tch" = { version = "*", features = ["download-libtorch"] }
"hound" = "*"
"samplerate" = "*"
"cpal" = "*"
"reqwest" = { version = "*", features = ["blocking", "multipart", "json"] }
"tempfile" = "*"
"base64" = "*"
"serde" = { version = "*", features = ["derive"] }
"serde_json" = "*"
